--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ env:
     - SBT_CMD="scripted tests/*"
     - SBT_CMD="scripted project-load/*"
     - SBT_CMD="checkBuildScala211"
-#    - SBT_CMD="mavenResolverPluginTest:scripted dependency-management/*1of2 project/transitive-plugins"
-#    - SBT_CMD="mavenResolverPluginTest:scripted dependency-management/*2of2"
+    - SBT_CMD="mavenResolverPluginTest:scripted dependency-management/*1of2 project/transitive-plugins"
+    - SBT_CMD="mavenResolverPluginTest:scripted dependency-management/*2of2"
 
 notifications:
   email:
