--- a/launch/src/main/input_resources/sbt/sbt.boot.properties
+++ b/launch/src/main/input_resources/sbt/sbt.boot.properties
@@ -1,5 +1,5 @@
 [scala]
-  version: 2.11.8
+  version: ${sbt.scala.version-auto}
 
 [app]
   org: ${sbt.organization-${{org}}}
@@ -7,7 +7,7 @@
   version: ${sbt.version-read(sbt.version)[${{sbt.version}}]}
   class: ${sbt.main.class-sbt.xMain}
   components: xsbti,extra
-  cross-versioned: ${sbt.cross.versioned-binary}
+  cross-versioned: ${sbt.cross.versioned-false}
   resources: ${sbt.extraClasspath-}
 
 [repositories]
