Drop Scala 2.10, add openjdk7

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: scala
 scala:
-   - 2.10.6
-   - 2.11.7
+  - 2.11.8
 jdk:
-   - oraclejdk8
-   - oraclejdk7
+  - openjdk7
+  - oraclejdk7
+  - oraclejdk8
