--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,11 +15,11 @@ install:
   - cmd: SET SBT_OPTS=-XX:MaxPermSize=2g -Xmx4g
   - cmd: SET COURSIER_NO_TERM=1
 build_script:
-  - sbt ++2.11.8 clean compile coreJVM/publishLocal simple-web-server/publishLocal
+  - sbt ++2.11.8 clean compile coreJVM/publishLocal http-server/publishLocal
   - sbt ++2.10.6 clean compile
   - sbt ++2.10.6 coreJVM/publishLocal cache/publishLocal # to make the scripted tests happy
 test_script:
-  - ps: Start-Job { & java -jar -noverify C:\projects\coursier\coursier launch -r http://dl.bintray.com/scalaz/releases io.get-coursier:simple-web-server_2.11:1.0.0-SNAPSHOT -- -d /C:/projects/coursier/tests/jvm/src/test/resources/test-repo/http/abc.com -u user -P pass -r realm -v }
+  - ps: Start-Job { & java -jar -noverify C:\projects\coursier\coursier launch -r http://dl.bintray.com/scalaz/releases io.get-coursier:http-server_2.11:1.0.0-SNAPSHOT -- -d /C:/projects/coursier/tests/jvm/src/test/resources/test-repo/http/abc.com -u user -P pass -r realm -v }
   - sbt ++2.11.8 testsJVM/test # Would node be around for testsJS/test?
   - sbt ++2.10.6 testsJVM/test plugin/scripted
 cache:
