--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jdk:
   - openjdk6
 notifications:
   email:
-    - qbranch@typesafe.com
+    - sbt-dev-bot@googlegroups.com
 before_install:
   - cat /etc/hosts # optionally check the content *before*
   - sudo hostname "$(hostname | cut -c1-63)"
