--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: scala
+
 scala:
   - 2.11.8
+  - 2.12.1
+
+script:
+  - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M "++$TRAVIS_SCALA_VERSION test"
+
 jdk:
   - oraclejdk8
