Add shading plugin

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,3 +36,9 @@ env:
 branches:
   only:
   - master
+cache:
+  directories:
+  - $HOME/.m2
+  - $HOME/.ivy2/cache
+  - $HOME/.sbt
+# Not adding $HOME/.coursier, we check that sbt-coursier works fine with an initially empty cache
