--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "repository": "https://github.com/alexarchambault/coursier.git",
   "license": "Apache-2.0",
   "devDependencies": {
-	"xmldom": "latest",
-	"xhr2": "latest"
+    "xmldom": "0.1.27",
+    "xhr2": "0.1.4"
   }
 }
