--- a/sbt.properties
+++ b/sbt.properties
@@ -2,6 +2,7 @@ sbt.version=0.13.8
 
 plugins = [
   "io.get-coursier:sbt-coursier:1.0.0-M15-2"
+  "io.get-coursier:sbt-shading:1.0.0-M15-2"
   "org.xerial.sbt:sbt-pack:0.8.2"
   "org.scala-js:sbt-scalajs:0.6.14"
   "com.jsuereth:sbt-pgp:1.0.0"
