--- a/sbt.properties
+++ b/sbt.properties
@@ -14,4 +14,5 @@ plugins = [
 
 dependencies = [
   "org.scala-sbt:scripted-plugin:"${sbt.version}
+  "org.anarres.jarjar:jarjar-core:1.0.1-coursier-SNAPSHOT"
 ]
