--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,9 @@ build_script:
   - sbt ++2.10.6 clean compile
   - sbt ++2.10.6 coreJVM/publishLocal cache/publishLocal # to make the scripted tests happy
 test_script:
-  - ps: Start-Job -filepath .\scripts\start-it-server.ps1 -ArgumentList $pwd
+  - ps: Start-Job -filepath .\scripts\start-it-auth-server.ps1 -ArgumentList $pwd
+  - ps: Start-Sleep -s 15 # wait for the first server to have downloaded its dependencies
+  - ps: Start-Job -filepath .\scripts\start-it-no-listing-server.ps1 -ArgumentList $pwd
   - sbt ++2.12.1 testsJVM/test testsJVM/it:test # Would node be around for testsJS/test?
   - sbt ++2.11.8 testsJVM/test testsJVM/it:test
   - sbt ++2.10.6 testsJVM/test testsJVM/it:test sbt-coursier/scripted sbt-coursier/publishLocal sbt-shading/scripted
