--- a/sbt/src/repo-override-test/repo.config
+++ b/sbt/src/repo-override-test/repo.config
@@ -1,3 +1,3 @@
 [repositories]
   local
-  typesafe-ivy-releases: https://repo.typesafe.com/typesafe/ivy-releases/, [organization]/[module]/[revision]/[type]s/[artifact](-[classifier]).[ext]
+  sonatype-oss-public: https://oss.sonatype.org/content/repositories/public/
