format: off / format: on

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,6 @@
 maxColumn = 100
 project.git = true
-project.excludeFilters = [ /sbt-test/, /input_sources/, /contraband-scala/, /Keys.scala ]
+project.excludeFilters = [ /sbt-test/, /input_sources/, /contraband-scala/ ]
 
 # http://docs.scala-lang.org/style/scaladoc.html recommends the JavaDoc style.
 # scala/scala is written that way too https://github.com/scala/scala/blob/v2.12.2/src/library/scala/Predef.scala
