Fix #3140: Add scalafmt hook

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -16,3 +16,5 @@ spaces.beforeSeqWildcard = true
 align.tokens.add = [
   { code = "=>",  owner = "Case"  }
 ]
+
+onTestFailure = "To fix this, run './scripts/format' from the project base directory."
