Fix java options for scripted
* Remove MaxPermSize from another scripted opts
* Reduce memory of sbt host to 1g instead of 2g
* Add Xms java options to scripted
* Enable parallelism with 512M for sbt tests
* Parallelism + batch mode

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ notifications:
     - sbt-dev-bot@googlegroups.com
 
 script:
-  - sbt -J-XX:ReservedCodeCacheSize=128m "$SBT_CMD"
+  - sbt -J-XX:ReservedCodeCacheSize=128m -J-Xmx1g -J-Xms1g "$SBT_CMD"
 
 before_cache:
   - find $HOME/.ivy2 -name "ivydata-*.properties" -print -delete
