Split project and aggregate project-load

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,9 @@ env:
     - SBT_CMD="scripted dependency-management/*2of4"
     - SBT_CMD="scripted dependency-management/*3of4"
     - SBT_CMD="scripted dependency-management/*4of4"
-    - SBT_CMD="scripted java/* package/* reporter/* run/*"
-    - SBT_CMD="scripted project/* project-load/*"
+    - SBT_CMD="scripted java/* package/* reporter/* run/* project-load/*"
+    - SBT_CMD="scripted project/*1of2"
+    - SBT_CMD="scripted project/*2of2"
     - SBT_CMD="scripted source-dependencies/*"
     - SBT_CMD="scripted tests/*"
     - SBT_CMD="repoOverrideTest:scripted dependency-management/*"
