Run sbt plugins tests in separate Travis runs

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,28 +10,42 @@ script:
 #    - bash <(curl -s https://codecov.io/bash)
 matrix:
   include:
-    - env: TRAVIS_SCALA_VERSION=2.12.1 PUBLISH=1
+    - env: SCALA_VERSION=2.12.1 PUBLISH=1
       os: linux
       jdk: oraclejdk8
-    - env: TRAVIS_SCALA_VERSION=2.11.11 PUBLISH=1
-      os: linux
-      jdk: oraclejdk8
-      sudo: required
-      services:
-        - docker
-    - env: TRAVIS_SCALA_VERSION=2.10.6 PUBLISH=1
+    - env: SCALA_VERSION=2.11.11 PUBLISH=1
       os: linux
       jdk: oraclejdk8
       sudo: required
       services:
         - docker
-    - env: TRAVIS_SCALA_VERSION=2.12.1 PUBLISH=1 SCALA_JS=1
+    - env: SCALA_VERSION=2.10.6 PUBLISH=1
       os: linux
       jdk: oraclejdk8
-    - env: TRAVIS_SCALA_VERSION=2.11.11 PUBLISH=1 SCALA_JS=1
+      sudo: required
+      services:
+        - docker
+    - env: SCALA_VERSION=2.12.1 SBT_COURSIER=1
       os: linux
       jdk: oraclejdk8
-    - env: TRAVIS_SCALA_VERSION=2.10.6 PUBLISH=1 SCALA_JS=1
+    - env: SCALA_VERSION=2.12.1 SBT_SHADING=1
+      os: linux
+      jdk: oraclejdk8
+    - env: SCALA_VERSION=2.10.6 SBT_COURSIER=1
+      os: linux
+      jdk: oraclejdk8
+      services:
+        - docker
+    - env: SCALA_VERSION=2.10.6 SBT_SHADING=1
+      os: linux
+      jdk: oraclejdk8
+    - env: SCALA_VERSION=2.12.1 SCALA_JS=1
+      os: linux
+      jdk: oraclejdk8
+    - env: SCALA_VERSION=2.11.11 SCALA_JS=1
+      os: linux
+      jdk: oraclejdk8
+    - env: SCALA_VERSION=2.10.6 SCALA_JS=1
       os: linux
       jdk: oraclejdk8
 env:
