--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-# Use Docker-based container (instead of OpenVZ)
-sudo: false
+# Use sudo-enabled for more RAM https://docs.travis-ci.com/user/ci-environment/
+sudo: required
+dist: trusty
 
 cache:
   directories:
@@ -36,13 +37,6 @@ env:
     - SBT_CMD="scripted project-load/*"
     - SBT_CMD="checkBuildScala211"
     - SBT_CMD="repoOverrideTest:scripted dependency-management/*"
-    - SBT_CMD="mavenResolverPluginTest:scripted dependency-management/*2of2"
-    - SBT_CMD="mavenResolverPluginTest:scripted dependency-management/*1of2 project/transitive-plugins"
-
-notifications:
-  email:
-    - eugene.yokota@typesafe.com
-    - joshua.suereth@typesafe.com
 
 script:
   - sbt -J-XX:ReservedCodeCacheSize=128m "$SBT_CMD"
