--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,10 +38,10 @@ test_script:
   - sbt ++2.12.1 "sbt-coursier/scripted sbt-coursier/simple" sbt-coursier/publishLocal "sbt-shading/scripted sbt-shading/*" # for sbt 1.0
   - sbt ++2.10.6 "sbt-coursier/scripted sbt-coursier/*" "sbt-coursier/scripted sbt-coursier-0.13/*" sbt-coursier/publishLocal "sbt-shading/scripted sbt-shading/*" "sbt-shading/scripted sbt-shading-0.13/*" # for sbt 0.13
 cache:
-  - C:\Users\appveyor\.ivy2\cache
-  - C:\Users\appveyor\.m2
-  - C:\Users\appveyor\.sbt
-  - C:\Users\appveyor\.coursier
+  - '%USERPROFILE%\.ivy2\cache'
+  - '%USERPROFILE%\.m2'
+  - '%USERPROFILE%\.sbt'
+  - '%USERPROFILE%\.coursier'
 branches:
   only:
     - master
