Allow to generate native bootstraps

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ matrix:
       os: linux
       jdk: oraclejdk8
       sudo: required
+      before_install:
+      - curl https://raw.githubusercontent.com/scala-native/scala-native/v0.3.1/bin/travis_setup.sh | bash -x
       services:
         - docker
     - env: SCALA_VERSION=2.10.6 PUBLISH=1
