--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,16 @@ install:
   - cmd: SET SBT_OPTS=-XX:MaxPermSize=2g -Xmx4g
   - git submodule update --init --recursive
   - ps: |
+      if (!(Test-Path 'C:\Users\appveyor\.ivy2\local\sandbox\sandbox_native0.3_2.11\0.1-SNAPSHOT')) {
+        iex 'git clone https://github.com/coursier/scala-native'
+        Set-Location -Path scala-native
+        iex 'git checkout 550bf6e37d27'
+        iex 'sbt ++2.11.8 sandbox/publishLocal'
+        iex 'git checkout f8088aef6981'
+        iex 'sbt ++2.11.8 nscplugin/publishLocal util/publishLocal nir/publishLocal tools/publishLocal'
+        Set-Location -Path ..
+      }
+  - ps: |
       if (!(Test-Path 'C:\Users\appveyor\.m2\repository\org\anarres\jarjar\jarjar-core\1.0.1-coursier-SNAPSHOT')) {
         iex 'git clone https://github.com/alexarchambault/jarjar'
         Set-Location -Path jarjar
