--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,9 @@ env:
     - SBT_CMD="scripted java/* package/* reporter/* run/* project-load/*"
     - SBT_CMD="scripted project/*1of2"
     - SBT_CMD="scripted project/*2of2"
-    - SBT_CMD="scripted source-dependencies/*"
+    - SBT_CMD="scripted source-dependencies/*1of3"
+    - SBT_CMD="scripted source-dependencies/*2of3"
+    - SBT_CMD="scripted source-dependencies/*3of3"
     - SBT_CMD="scripted tests/*"
     - SBT_CMD="repoOverrideTest:scripted dependency-management/*"
 
