Try fixing scala-native things on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
       os: linux
       jdk: oraclejdk8
       sudo: required
+      group: deprecated-2017Q3
       before_install:
       - curl https://raw.githubusercontent.com/scala-native/scala-native/v0.3.1/bin/travis_setup.sh | bash -x
       services:
