Add Scala syntax from daltonjorge/vscode-scala
This adds Scala syntax for VS Code. The current plugin was relying on daltonjorge/vscode-scala for detecting that `*.scala` is a Scala source. This change integrates the plugin into this one.

daltonjorge/vscode-scala is licensed under MIT license.

--- a/vscode-sbt-scala/client/package.json
+++ b/vscode-sbt-scala/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vscode-sbt-scala",
   "displayName": "Scala (sbt)",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Lightbend, Inc.",
   "license": "BSD-3-Clause",
   "publisher": "lightbend",
@@ -17,6 +17,29 @@
   "categories": [
     "Languages"
   ],
+  "contributes": {
+    "languages": [
+        {
+            "id": "scala",
+            "aliases": [
+                "Scala",
+                "scala"
+            ],
+            "extensions": [
+                ".scala",
+                ".sbt"
+            ],
+            "configuration": "./language-configuration.json"
+        }
+    ],
+    "grammars": [
+        {
+            "language": "scala",
+            "scopeName": "source.scala",
+            "path": "./syntaxes/Scala.tmLanguage"
+        }
+    ]
+  },
   "activationEvents": [
     "workspaceContains:build.sbt"
   ],
