--- a/vscode-sbt-scala/client/package.json
+++ b/vscode-sbt-scala/client/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/sbt/sbt"
   },
   "description": "Scala language support using sbt",
-  "icon": "images/sbt-logo-455x262.png",
+  "icon": "images/sbt-logo-bgwhite-455x262.png",
   "engines": {
     "vscode": "^1.16.0"
   },
