Create configuration and basic data for Scala Outline view
The Outline view is still not able to retrieve the correct data of the
server because I don't know yet how to get access to the data.

--- a/vscode-sbt-scala/client/package.json
+++ b/vscode-sbt-scala/client/package.json
@@ -38,7 +38,34 @@
         "scopeName": "source.scala",
         "path": "./syntaxes/Scala.tmLanguage"
       }
-    ]
+    ],
+    "commands": [
+      {
+        "command": "scalaOutline.refresh",
+        "title": "Refresh Scala Outline",
+        "icon": {
+          "dark": "images/dark/icon-refresh.svg",
+          "light": "images/light/icon-refresh.svg"
+        }
+      }
+    ],
+    "views": {
+      "explorer": [
+        {
+          "id": "scalaOutline",
+          "name": "Scala Outline"
+        }
+      ]
+    },
+    "menus": {
+      "view/title": [
+        {
+          "command": "scalaOutline.refresh",
+          "when": "view == scalaOutline",
+          "group": "navigation"
+        }
+      ]
+    }
   },
   "activationEvents": [
     "workspaceContains:build.sbt"
