Introduce support for OS-specific standard cache directories (#676)
This cleans up the home directories of users and helps making sure that
Coursier's cache is not accidentically backed up by applications or OS
functionality.

The precedence is as follows:

- existing $COURSIER_CACHE environment variable
- existing coursier.cache Java property
- existing operating system specific standards:
  - Linux:   $XDG_CACHE_HOME/coursier, with fallback to ~/.cache/coursier
  - Windows: {SpecialFolder.LocalApplicationData}/cache/Coursier
  - macOS:   $HOME/Library/Caches/Coursier
- existing ~/.coursier/
- fallback to operating system specific standard directory else.

See discussion in https://github.com/coursier/coursier/pull/676#issuecomment-338974822

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tests/metadata"]
 	path = tests/metadata
 	url = https://github.com/coursier/test-metadata.git
+[submodule "directories"]
+	path = directories
+	url = https://github.com/soc/directories.git
