add Java 9 test

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ scala:
   - 2.11.11
   - 2.12.3
 
+matrix:
+  include:
+  - scala: 2.12.3
+    jdk: oraclejdk9
+
 script:
   - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M ";++$TRAVIS_SCALA_VERSION;mimaReportBinaryIssues;scalafmt::test;test:scalafmt::test;sbt:scalafmt::test;test"
 
