--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,4 +20,4 @@ install:
   - SET PATH=C:\sbt\sbt\bin;%PATH%
   - SET SBT_OPTS=-XX:MaxPermSize=2g -Xmx4g -Dfile.encoding=UTF8
 test_script:
-  - sbt "-Djna.nosys=true" "scripted actions/*"
+  - sbt "scripted actions/*"
