Add json report to fetch and local exclusion option (#692)
This patch introduces changes for cli with json output #659. Format as follows:
```
{
  "conflict_resolution": {
    "org:name:version" (requested): "org:name:version" (reconciled) 
  },
  "dependencies": [
    {
      "coord": "orgA:nameA:versionA",
      "files": [
        [
          <classifier>,
          <path>
        ]
      ],
      "dependencies": [ // coodinates for its transitive dependencies
        <orgX:nameX:versionX>,
        <orgY:nameY:versionY>,
      ]
    },
    {
      "coord": "orgB:nameB:versionB",
      "files": [
        [
          <classifier>,
          <path>
        ]
      ],
      "dependencies": [ // coodinates for its transitive dependencies
        <orgX:nameX:versionX>,
        <orgZ:nameZ:versionZ>,
      ]
    },
  ]
}
```
For example:
```
fetch -t org.apache.avro:trevni-avro:1.8.2  org.slf4j:slf4j-api:1.7.6 --json-output-file x.out
  Result:
├─ org.apache.avro:trevni-avro:1.8.2
│  ├─ org.apache.avro:trevni-core:1.8.2
│  │  ├─ org.apache.commons:commons-compress:1.8.1
│  │  ├─ org.slf4j:slf4j-api:1.7.7
│  │  └─ org.xerial.snappy:snappy-java:1.1.1.3
│  └─ org.slf4j:slf4j-api:1.7.7
└─ org.slf4j:slf4j-api:1.7.6 -> 1.7.7
```
would produce the following json file:
```
$ jq < x.out 
{
  "conflict_resolution": {
    "org.slf4j:slf4j-api:1.7.6": "org.slf4j:slf4j-api:1.7.7"
  },
  "dependencies": [
    {
      "coord": "org.apache.avro:trevni-core:1.8.2",
      "files": [
        [
          "",
          "/Users/yic/Library/Caches/Coursier/v1/https/repo1.maven.org/maven2/org/apache/avro/trevni-core/1.8.2/trevni-core-1.8.2.jar"
        ]
      ],
      "dependencies": [
        "org.slf4j:slf4j-api:1.7.7",
        "org.xerial.snappy:snappy-java:1.1.1.3",
        "org.apache.commons:commons-compress:1.8.1"
      ]
    },
    {
      "coord": "org.apache.avro:trevni-avro:1.8.2",
      "files": [
        [
 

--- a/3rdparty/jvm/BUILD
+++ b/3rdparty/jvm/BUILD
@@ -111,17 +111,6 @@ jar_library(
 )
 
 jar_library(
-    name = "jackson-module-scala",
-    jars = [
-        scala_jar(
-            name = "jackson-module-scala",
-            org = "com.fasterxml.jackson.module",
-            rev = "2.8.4",
-        ),
-    ],
-)
-
-jar_library(
     name = "caseapp",
     jars = [
         scala_jar(
@@ -167,5 +156,34 @@ jar_library(
             org = "io.get-coursier.scala-native",
             rev = "0.3.0-coursier-1",
         ),
+    ],
+)
+
+jar_library(
+    name = "utest",
+    jars = [
+        scala_jar(
+            name = "utest",
+            org = "com.lihaoyi",
+            rev = "0.5.4",
+        ),
+    ],
+)
+
+jar_library(
+    name = "async",
+    jars = [
+        scala_jar(
+            name = "scala-async",
+            org = "org.scala-lang.modules",
+            rev = "0.9.7",
+        ),
+    ],
+)
+
+jar_library(
+    name = "scalatest",
+    jars = [
+        scala_jar("org.scalatest", "scalatest", "3.0.0"),
     ],
 )
