--- a/pants.ini
+++ b/pants.ini
@@ -1,5 +1,12 @@
+[DEFAULT]
+local_artifact_cache: %(pants_bootstrapdir)s/artifact_cache
+
 [GLOBAL]
 pants_version: 1.2.1
+
+[cache]
+read_from: ["%(local_artifact_cache)s"]
+write_to: ["%(local_artifact_cache)s"]
 
 [jvm]
 options: ['-Xmx4g', '-XX:MaxMetaspaceSize=256m']
