Specify classifier on module level on CLI (#735)

--- a/pants.ini
+++ b/pants.ini
@@ -33,3 +33,6 @@ jvm_options: [
     # TODO: Remove after https://github.com/pantsbuild/pants/issues/4477 is pulled in.
     '-Dzinc.analysis.cache.limit=5000',
   ]
+
+[test.junit]
+jvm_options = ['-Xmx2048m']
