--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,9 +4,8 @@ init:
   - git config --global core.autocrlf input
 
 install:
-  - cinst jdk8 -params 'installdir=C:\\jdk8'
-  - SET JAVA_HOME=C:\jdk8
-  - SET PATH=C:\jdk8\bin;%PATH%
+  - SET JAVA_HOME=C:\Program Files\Java\jdk1.8.0
+  - SET PATH=%JAVA_HOME%\bin;%PATH%
 
   - ps: |
       Add-Type -AssemblyName System.IO.Compression.FileSystem
@@ -21,3 +20,7 @@ install:
   - SET SBT_OPTS=-XX:MaxPermSize=2g -Xmx4g -Dfile.encoding=UTF8
 test_script:
   - sbt "scripted actions/*" "testOnly sbt.ServerSpec"
+
+cache:
+  - '%USERPROFILE%\.ivy2\cache'
+  - '%USERPROFILE%\.sbt'
