--- a/pants.ini
+++ b/pants.ini
@@ -12,7 +12,8 @@ write_to: ["%(local_artifact_cache)s"]
 options: ['-Xmx4g', '-XX:MaxMetaspaceSize=256m']
 
 [scala-platform]
-version: 2.11
+version: custom
+suffix_version: 2.12
 
 [jvm-platform]
 default_platform: java8
