Separate out bootstrap integration test (#769)
Separate bootstrap test because Pants does not pre-build the bootstrap.jar

--- a/cli/src/test/scala-2.12/coursier/cli/BUILD
+++ b/cli/src/test/scala-2.12/coursier/cli/BUILD
@@ -1,8 +1,17 @@
 junit_tests(
     name = "test",
     dependencies = [
+        ":lib",
         "3rdparty/jvm:scalatest",
         "cli/src/main/scala-2.12:cli",
     ],
-    sources = globs("*.scala"),
+    sources = ["CliFetchIntegrationTest.scala", "CliUnitTest.scala"],
+)
+
+scala_library(
+    name='lib',
+    dependencies = [
+        "3rdparty/jvm:caseapp",
+    ],
+    sources = ["CliTestLib.scala"],
 )
