--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,53 @@
 dist: trusty
-addons:
-  apt:
-    packages:
-    - fakeroot
+
 language: scala
-script:
-  - sbt -Dsbt.build.version=1.0.3 ++$TRAVIS_SCALA_VERSION rpm:packageBin debian:packageBin universal:packageBin
+
+env:
+  global:
+  - SBT_VER=1.1.1
+
+matrix:
+  include:
+    ## build using JDK 8, test using JDK 8
+    - script:
+        - sbt -Dsbt.build.version=$SBT_VER universal:packageBin
+        - cd citest && ./test.sh
+
+    ## build using JDK 8, test using JDK 9
+    - script:
+        - sbt -Dsbt.build.version=$SBT_VER universal:packageBin
+        - jdk_switcher use oraclejdk9
+        - cd citest && ./test.sh
+
+    ## build using JDK 8, test using JDK 10
+    - script:
+        - sbt -Dsbt.build.version=$SBT_VER universal:packageBin
+        - citest/install-jdk10.sh
+        - cd citest && ./test.sh
+
+    - script:
+        - sbt -Dsbt.build.version=$SBT_VER rpm:packageBin debian:packageBin
+      addons:
+        apt:
+          packages:
+            - fakeroot
+            - rpm
+
 scala:
-  - 2.10.3
+  - 2.10.7
+
 jdk:
   - oraclejdk8
-notifications:
-  email:
-    - sbt-dev-bot@googlegroups.com
-before_install:
-  - cat /etc/hosts # optionally check the content *before*
-  - sudo hostname "$(hostname | cut -c1-63)"
-  - sed -e "s/^\\(127\\.0\\.0\\.1.*\\)/\\1 $(hostname | cut -c1-63)/" /etc/hosts | sudo tee /etc/hosts
-  - cat /etc/hosts # optionally check the content *after*
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq rpm
+
+# Undo _JAVA_OPTIONS environment variable
+before_script:
+  - _JAVA_OPTIONS=
+
+cache:
+  directories:
+    - $HOME/.ivy2/cache
+    - $HOME/.sbt/boot
+
+before_cache:
+  - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
+  - find $HOME/.sbt  -name "*.lock"               -delete
