--- a/cli/src/test/scala-2.12/coursier/cli/BUILD
+++ b/cli/src/test/scala-2.12/coursier/cli/BUILD
@@ -5,7 +5,7 @@ junit_tests(
         "3rdparty/jvm:scalatest",
         "cli/src/main/scala-2.12:cli",
     ],
-    sources = ["CliFetchIntegrationTest.scala", "CliUnitTest.scala"],
+    sources = rglobs("*.scala", exclude = ["CliTestLib.scala", "CliBootstrapIntegrationTest.scala"]),
 )
 
 scala_library(
