Retry on ChecksumError (#797)
Fix for #780

--- a/cli/src/test/scala-2.12/coursier/cli/BUILD
+++ b/cli/src/test/scala-2.12/coursier/cli/BUILD
@@ -11,7 +11,7 @@ junit_tests(
 scala_library(
     name='lib',
     dependencies = [
-        "3rdparty/jvm:caseapp",
+        "cache/src/main/scala:cache"
     ],
     sources = ["CliTestLib.scala"],
 )
