Remove scalaz dependency from core and cache, add scalaz-interop module

--- a/cli/src/main/scala-2.12/BUILD
+++ b/cli/src/main/scala-2.12/BUILD
@@ -8,6 +8,7 @@ scala_library(
         "extra/src/main/scala/coursier:fallback-deps-repo",
         "extra/src/main/scala/coursier/extra:extra",
         "extra/src/main/scala-2.12/coursier/extra:native",
+        "scalaz:scalaz-interop",
         ":util",
     ],
     sources = globs(
