--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,11 @@ matrix:
   - scala: 2.12.4
     jdk: oraclejdk9
 
-script:
-  - sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M ";++$TRAVIS_SCALA_VERSION;mimaReportBinaryIssues;scalafmt::test;test:scalafmt::test;sbt:scalafmt::test;test"
+script: sbt -Dfile.encoding=UTF8 -J-XX:ReservedCodeCacheSize=256M
+  ++$TRAVIS_SCALA_VERSION
+  mimaReportBinaryIssues
+  scalafmt::test test:scalafmt::test sbt:scalafmt::test
+  test
 
 cache:
   directories:
@@ -19,5 +22,5 @@ cache:
     - $HOME/.sbt
 
 before_cache:
-  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
-  - find $HOME/.sbt        -name "*.lock"               -print -delete
+  - find $HOME/.ivy2/cache -name "ivydata-*.properties" -delete
+  - find $HOME/.sbt        -name "*.lock"               -delete
